--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp"
+        android:padding="15dp"
         android:gravity="center_horizontal">
 
 
@@ -137,7 +137,7 @@
             <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@drawable/default_image"
+                android:src="@drawable/habits_1"
                 android:layout_marginBottom="4dp"/>
 
             <TextView
@@ -191,7 +191,7 @@
                     android:text="Current Streak"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
+                    android:textSize="13sp"
                     android:textColor="#777"/>
             </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -215,8 +215,7 @@
                 <ImageView
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:src="@drawable/default_image"
-                    android:tint="#FF9800"
+                    android:src="@drawable/torch"
                     android:layout_marginBottom="4dp"/>
                 <TextView
                     android:id="@+id/longestStreakTV"
@@ -231,7 +230,7 @@
                     android:text="Longest Streak"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
+                    android:textSize="13sp"
                     android:textColor="#777"/>
             </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -264,16 +263,16 @@
                 android:gravity="center">
 
                 <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:src="@drawable/default_image"
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
+                    android:src="@drawable/habits"
                     android:layout_marginBottom="4dp"/>
                 <TextView
                     android:id="@+id/completedHabitsTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Most Completed: Drink Water"
-                    android:textSize="18sp"
+                    android:textSize="14sp"
                     android:textStyle="bold"
                     android:textColor="#000"/>
 
@@ -281,7 +280,7 @@
                     android:text="Most completed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
+                    android:textSize="12sp"
                     android:textColor="#777"/>
 
             </LinearLayout>
