--- a/app/src/main/res/layout/item_challenge_simple.xml
+++ b/app/src/main/res/layout/item_challenge_simple.xml
@@ -20,7 +20,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginBottom="8dp"
-            android:tint="#679273" />
+            app:tint="#679273" />
 
         <TextView
             android:id="@+id/challenge_title"
