--- a/app/src/main/res/layout/fragment_garden.xml
+++ b/app/src/main/res/layout/fragment_garden.xml
@@ -18,40 +18,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/testControlsLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/gardenTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <Button
-            android:id="@+id/addPlantButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Plant Seed"
-            android:backgroundTint="#8BC34A"
-            android:layout_marginEnd="8dp" />
-
-        <Button
-            android:id="@+id/testGrowButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Water Plant"
-            android:backgroundTint="#4CAF50"
-            android:layout_marginEnd="8dp" />
-
-        <Spinner
-            android:id="@+id/plantSelector"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="120dp" />
-    </LinearLayout>
-
     <edu.northeastern.finalproject_group_1.GardenView
         android:id="@+id/gardenView"
         android:layout_width="0dp"
@@ -61,6 +27,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/testControlsLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/gardenTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
